always show vertical scrollbar to avoid jumps

--- a/sage/src/static/style.sass
+++ b/sage/src/static/style.sass
@@ -27,6 +27,9 @@ section
 html
   padding: 0
   margin: 0
+  overflow: scroll
+  @include media(medium)
+    overflow: auto
 
 body
   +sans-serif
